# ai-weather

./: .gitignore  App.tsx  Weather.tsx  app.py  package.json  test_page.tsx
.github/workflows/: black.yml  node.js.yml  pylint.yml
backend/: .env.example  app.py  pyproject.toml
cmd-prototype/: main.py  pyproject.toml
frontend/: App.tsx  README.md  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: Weather.tsx
frontend/src/components/Footer/: Footer.tsx  FooterStyles.ts
frontend/src/components/Header/: Header.tsx  HeaderStyles.ts
frontend/src/components/Navbar/: Navbar.tsx  NavbarStyles.ts
frontend/src/components/WeatherPage/: Weather.tsx  WeatherDataInterface.ts  WeatherStyles.ts
frontend/src/pages/: Weather.tsx
src/: App.tsx
