[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["geeeeenccc <gencgeray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
