[tool.poetry]
name = "weather-ai"
version = "0.1.0"
description = ""
authors = ["geeeeenccc <gencgeray@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
