[tool.poetry]
name = "weather-ai"
version = "0.1.0"
description = ""
authors = ["geeeeenccc <gencgeray@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"
requests = "^2.29.0"
openai = "^0.27.5"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
